# Financial-Manager

./: .gitignore  background_run.sh  dockerfile  pyproject.toml  setup.sh
data/: adjusted_price_loader.py  kr_stock_price_loader.py  kr_ticker_loader.py  sector_data_loader.py
data/pipeline/: __init__.py  get_kr_adjusted_price.py  get_kr_stock_foregine.py  get_kr_stock_isin.py  get_kr_stock_price.py  get_kr_stock_sector.py  get_kr_stock_ticker.py
data/pipeline/kr_stock/: __init__.py  fetch_isin.py  fetch_krx_adjusted_price.py  fetch_krx_foreign.py  fetch_krx_isin.py  fetch_krx_sector.py  fetch_krx_ticker.py  transform_krx_adjusted_price.py  transform_krx_foreign.py  transform_krx_isin.py  transform_krx_sector.py  transform_krx_ticker.py
data/utils/: __init__.py  get_biz_day.py  log_to_csv.py  state_print.py
